fix(:zap:): Overflow Fix

--- a/Datazen-Website/src/styles/MeetTheTeam.css
+++ b/Datazen-Website/src/styles/MeetTheTeam.css
@@ -1,5 +1,6 @@
 .team-carousel {
   margin: 0 auto;
+  overflow-y: hidden;
 }
 
 .slick-track {
